# opengl-worker-test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/QT/: CGLThread.cpp  CGLThread.h  CGLWidget.cpp  CGLWidget.h  CMakeLists.txt  OpenGL.h  gui_main.cpp  gui_main.h  qt_main.ui
